# melodybrain

./: .gitignore  Cargo.toml  LICENSE  README.md  melodybrain.sh
.github/workflows/: build.yml
src/: lib.rs
src/selfhosted/: http.rs  main.rs  notes.rs  udp.rs
src/selfhosted/assets/: page.html
src/server/: dbs.rs  main.rs
