[package]
name = "melodybrain"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "melodybrain-client"
path = "src/selfhosted/main.rs"

[[bin]]
name = "melodybrain-server"
path = "src/server/main.rs"

[dependencies]
axum = { version = "0.8.8", default-features = false, features = ["form", "http1", "json", "macros", "tokio"] }
bytemuck = { version = "1.24.0", features = ["derive", "must_cast"] }
getrandom = "0.3.4"
maxminddb = { version = "0.27.1", features = ["mmap", "unsafe-str-decode"] }
memmap2 = "0.9.9"
noise-functions = "0.8.2"
postcard = { version = "1.1.3", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["rt", "macros", "time", "sync"] }

[profile.release]
strip = true
panic = "abort"
lto = "thin"
